[package]
name = "exmicro"
version = "0.1.0"
authors = ["millsky <kyle83567@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdrs = { version = "2" }
futures = "0.3.4"
retry = "1.0.0"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
